# codex

./: .dockerignore  .env.example  .gitignore  .gitmodules  .tarpaulin.toml  Cargo.toml  DEPLOYMENT.md  README.md  architecture_spec.md  package.json  pnpm-lock.yaml  roadmap.md  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  rs-ci.yml  test.yml
deploy/clob/: .env.example  README.md  add-market.ts  authorize-orderbook.ts  cancel-order.ts  config.ts  continue-matching.ts  create-orderbook.ts  create-vault.ts  deploy-all.ts  deploy-full.ts  deploy-l1.ts  deploy-l2.ts  deploy-mock-usdc.ts  deployments.json  deployments.test.ts  deployments.ts  deposit-eth.ts  deposit-vault.ts  ethexe.test.ts  ethexe.ts  init-orderbook.ts  init-vault.ts  package-lock.json  package.json  place-order-eth.ts  place-order-gear.ts  place-order.ts  query-vault.ts  read-orderbook-state.ts  read-vault-balance.ts  read-vault-state-queries.ts  read-vault-state.ts  set-market-scale.ts  set-orderbook-caller.ts  set-orderbook-vault.ts  set-vault-caller.ts  test-codeid.ts  test-env.ts  topup-exec.ts  (+6 more)
deploy/clob/artifacts/: OrderbookCaller.json  VaultCaller.json
deploy/demo-ui/: Caddyfile  Dockerfile.demo-ui  README.md  app.env.example  deploy.env.example  docker-compose.yml
deploy/demo-ui/scripts/: bootstrap-ubuntu.sh  deploy.sh  init-env.sh  update.sh  verify.sh
ethereum/: foundry.toml
ethereum/script/: CreateMirrorProgram.s.sol  DebugRelease.s.sol  DeployOrderbookAbi.s.sol  DeployVaultAbi.s.sol  DeployVaultCaller.s.sol
ethereum/src/: IVault.sol  IVaultCallbacks.sol  MockToken.sol  MockUSDC.sol  Orderbook.sol  SailsCodec.sol  Vault.sol
ethereum/test/: DebugRelease.t.sol  OrderbookCaller.t.sol  Vault.t.sol  VaultForceExit.t.sol  VaultWithdrawals.t.sol
frontend/: pnpm-lock.yaml
libraries/clob-common/: Cargo.toml
libraries/clob-common/src/: lib.rs  tests.rs
libraries/dex-common/: Cargo.toml
libraries/dex-common/src/: lib.rs
libraries/intrusive-arena/: Cargo.toml
libraries/intrusive-arena/src/: arena.rs  list.rs
libraries/intrusive_arena/: Cargo.toml
libraries/intrusive_arena/src/: arena.rs  lib.rs
libraries/matching-engine/: Cargo.toml
libraries/matching-engine/src/: engine.rs  tests.rs  types.rs
libraries/matching_engine/: Cargo.toml
libraries/matching_engine/src/: book.rs  engine.rs  lib.rs  math.rs  tests.rs  types.rs
programs/ethapp/tests/: gtest.rs
programs/ethapp_with_events/tests/: gtest.rs
programs/orderbook/: .binpath  Cargo.toml  orderbook.idl
programs/orderbook/client/: Cargo.toml  build.rs
programs/orderbook/client/src/: lib.rs
programs/orderbook/src/: lib.rs  orderbook.rs  state.rs  varint.rs
programs/orderbook/src/state/: arena.rs  linked_list.rs  mod.rs
programs/orderbook/src/tests/: common.rs  deposit_withdraw.rs  limit.rs  market.rs  mod.rs
programs/orderbook/tests/: benchmark_gas.rs  gtest.rs  orderbook.rs  orderbook_vault_e2e.rs  test_balances_messaging.rs  test_gas_batching.rs  vault_interaction_tests.rs
programs/orderbook/tests/common/: mod.rs
programs/registry/: .binpath  Cargo.toml
programs/registry/src/: lib.rs
programs/vault/: .binpath  Cargo.toml  build.rs  vault.idl
programs/vault/client/: Cargo.toml  build.rs
programs/vault/client/src/: lib.rs
programs/vault/src/: lib.rs  market_gateway.rs  orderbook_client.rs  state.rs
programs/vault/src/tests/: mod.rs
programs/vault/tests/: abi_encoding.rs  cross_chain_cycle.rs  e2e_vault.rs  gtest.rs
scripts/: README.md  deploy.sh  helpers.sh  setup-local-env.sh  utils.sh
scripts/browser-agent/: runtime.ts
scripts/demo-ui/: auto-trader.ts  live-demo.ts  server.ts
scripts/demo-ui/public/: agent.js  app.js  index.html  styles.css
scripts/showcase/: accounts.ts  codec.ts  config.ts  load-liquidity.ts  logger.ts  main.ts
scripts/showcase/programs/: base.ts  index.ts  orderbook.ts  util.ts  vault.ts
