[workspace]
resolver = "2"
members = [
   # "programs/ethapp_with_events",
   # "programs/ethapp",
    "programs/vault",
    "programs/vault/client", "libraries/clob-common", "programs/orderbook", "programs/orderbook/client", "programs/registry",
    "libraries/intrusive_arena", 
    "libraries/matching_engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sails-rs = "=0.10.2"
sails-idl-gen = "=0.10.2"
sails-client-gen = "=0.10.2"
tokio = { version = "1", features = ["rt", "macros"] }
gtest = "1"
insta = "1"
alloy-sol-types = { version = "1.5.1", default-features = false }
