[workspace]
resolver = "2"
members = [
    "programs/vault",
    "programs/vault/client",
    "libraries/dex-common", "programs/orderbook", "programs/orderbook/client",
    "libraries/intrusive_arena",
    "libraries/matching-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sails-rs = "=0.10.2"
sails-idl-gen = "=0.10.2"
sails-client-gen = "=0.10.2"
tokio = { version = "1", features = ["rt", "macros"] }
gtest = "1"
insta = "1"
alloy-sol-types = { version = "0.8.15", default-features = false }

dex-common = { path = "libraries/dex-common" }
matching-engine = { path = "libraries/matching-engine" }
