[workspace]
resolver = "2"
members = [
    "programs/vault",
    "programs/vault/client",
    "libraries/dex-common", "programs/orderbook", "programs/orderbook/client",
    "libraries/intrusive-arena",
    "libraries/matching-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sails-rs = "=0.10.2"
sails-idl-gen = "=0.10.2"
sails-client-gen = "=0.10.2"
tokio = { version = "1", features = ["rt", "macros"] }
gstd = "=1.10.0"
gtest = "1"
insta = "1"
alloy-sol-types = { version = "0.8.15", default-features = false }
mockall = { version = "0.12" }

dex-common = { path = "libraries/dex-common" }
matching-engine = { path = "libraries/matching-engine" }
intrusive-arena = { path = "libraries/intrusive-arena" }

orderbook = { path = "programs/orderbook" }
orderbook-client = { path = "programs/orderbook/client" }

vault = { path = "programs/vault" }
vault-client = { path = "programs/vault/client" }
