[package]
name = "orderbook"
version.workspace = true
edition.workspace = true

[dependencies]
sails-rs = { workspace = true, features = ["ethexe", "debug"] }
dex-common.workspace = true
vault-client = { path = "../vault/client" }
intrusive_arena = { path = "../../libraries/intrusive_arena" }
matching-engine.workspace = true

[build-dependencies]
sails-rs = { workspace = true, features = ["ethexe", "wasm-builder"] }

[dev-dependencies]
insta.workspace = true
sails-rs = { workspace = true, features = ["ethexe", "gtest", "idl-gen"] }
tokio = { workspace = true, features = ["rt", "macros"] }
orderbook-client = { path = "client" }
