[package]
name = "vault-app"
version.workspace = true
edition.workspace = true

[dependencies]
sails-rs = { workspace = true, features = ["ethexe", "debug"] }
clob-common = { path = "../../libraries/clob-common" }
alloy-sol-types = { workspace = true }

[features]
debug = []

[build-dependencies]
sails-rs = { workspace = true, features = ["ethexe", "wasm-builder"] }

[dev-dependencies]
insta.workspace = true
sails-rs = { workspace = true, features = ["ethexe", "gtest", "idl-gen"] }
tokio = { workspace = true, features = ["rt", "macros"] }
vault-client = { path = "client" }
alloy-sol-types = { workspace = true }
