[package]
name = "vault"
version.workspace = true
edition.workspace = true

[dependencies]
sails-rs = { workspace = true, features = ["ethexe", "debug"] }
dex-common.workspace = true
alloy-sol-types.workspace = true

[features]
debug = []

[build-dependencies]
sails-rs = { workspace = true, features = ["ethexe", "wasm-builder"] }

[dev-dependencies]
insta.workspace = true
sails-rs = { workspace = true, features = ["ethexe", "gtest", "idl-gen"] }
tokio = { workspace = true, features = ["rt", "macros"] }
vault-client.workspace = true
alloy-sol-types.workspace = true
