[package]
name = "vault"
version.workspace = true
edition.workspace = true

[dependencies]
mockall = { workspace = true, optional = true }
sails-rs = { workspace = true, features = ["ethexe", "debug"] }
dex-common.workspace = true
alloy-sol-types.workspace = true
gstd.workspace = true

[features]
debug = []
mocks = ["sails-rs/mockall", "dep:mockall"]

[build-dependencies]
sails-rs = { workspace = true, features = ["ethexe", "wasm-builder"] }
sails-client-gen.workspace = true
sails-idl-gen.workspace = true

[dev-dependencies]
insta.workspace = true
sails-rs = { workspace = true, features = ["ethexe", "gtest", "idl-gen"] }
tokio = { workspace = true, features = ["rt", "macros"] }
vault-client.workspace = true
alloy-sol-types.workspace = true