[package]
name = "orderbook-client"
version.workspace = true
edition.workspace = true

[dependencies]
mockall = { workspace = true, optional = true }
sails-rs = { workspace = true, features = ["ethexe"] }

[build-dependencies]
sails-client-gen.workspace = true
sails-idl-gen.workspace = true
orderbook.workspace = true

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]
