[package]
name = "vault-client"
version.workspace = true
edition.workspace = true

[dependencies]
mockall = { version = "0.12", optional = true }
sails-rs = { workspace = true, features = ["ethexe"] }

[build-dependencies]
sails-client-gen.workspace = true
sails-idl-gen.workspace = true
vault-app = { path = "../" }

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]
